--- a/front/html/product.html
+++ b/front/html/product.html
@@ -47,7 +47,7 @@
         <section class="item">
           <article>
             <div class="item__img">
-              <!-- <img src="../images/logo.png" alt="Photographie d'un canapé"> -->
+              <img src="../images/logo.png" alt="Photographie d'un canapé">
             </div>
             <div class="item__content">
 
@@ -58,7 +58,7 @@
 
               <div class="item__content__description">
                 <p class="item__content__description__title">Description :</p>
-                <p id="description"><!-- Dis enim malesuada risus sapien gravida nulla nisl arcu. --></p>
+                <p id="description">Dis enim malesuada risus sapien gravida nulla nisl arcu</p>
               </div>
 
               <div class="item__content__settings">
