--- a/front/html/product.html
+++ b/front/html/product.html
@@ -47,7 +47,7 @@
         <section class="item">
           <article>
             <div class="item__img">
-              <img src="../images/logo.png" alt="Photographie d'un canapé">
+              <!-- <img src="../images/logo.png" alt="Photographie d'un canapé"> -->
             </div>
             <div class="item__content">
 
@@ -58,7 +58,7 @@
 
               <div class="item__content__description">
                 <p class="item__content__description__title">Description :</p>
-                <p id="description">Dis enim malesuada risus sapien gravida nulla nisl arcu</p>
+                <p id="description"><!-- Dis enim malesuada risus sapien gravida nulla nisl arcu. --></p>
               </div>
 
               <div class="item__content__settings">
@@ -73,7 +73,7 @@
 
                 <div class="item__content__settings__quantity">
                   <label for="itemQuantity">Nombre d'article(s) (1-100) :</label>
-                  <input type="number" name="itemQuantity" min="1" max="100" value="0" id="quantity">
+                  <input type="number" name="itemQuantity" min="1" max="100" value="1" id="quantity">
                 </div>
               </div>
 
